# PaperFast

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/components/: sidebar.py
app/database/: model.py  repository.py  session.py
app/retrieval/: vector_store.py
app/utils/: config.py  state_manager.py
app/workflow/: graph.py  state.py
app/workflow/agents/: agent.py  general_agent.py  master_agent.py  output_agent.py  rag_agent.py  search_agent.py  summary_agent.py
