[project]
name = "paperfast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain[openai]>=1.2.0",
    "langfuse>=3.11.2",
    "langgraph>=1.0.5",
    "langgraph-api>=0.6.14",
    "langgraph-sdk>=0.3.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-watcher>=0.6.0",
    "ruff>=0.14.10",
]

[tool.isort]
profile = "black"

[tool.poe.tasks.lint]
shell = "black . && isort . && ruff check ."

[tool.poe.tasks.test]
cmd = "pytest -v --cov=. --cov-report=term --cov-report=html:htmlcov"

[tool.poe.tasks.watch-test]
cmd = "ptw . --now --clear"

[tool.poe.tasks.run]
cmd = "streamlit run app/main.py"
# envfile = ".env"